# luminosity

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .shellcheckrc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  deny.toml  mise.toml  pup.ron  pyproject.toml  rustfmt.toml
.accelerator/: .gitignore  config.md
.accelerator/state/: migrations-applied
.claude-plugin/: marketplace-prerelease.json  marketplace.json  plugin.json
.github/workflows/: main.yml
cli/: Cargo.toml  build.rs  clippy.toml  deny.toml  pup.ron
cli/config/: Cargo.toml
cli/config-adapters/: Cargo.toml
cli/config-adapters/src/: document.rs  frontmatter.rs  lib.rs  store.rs
cli/config/src/: context.rs  error.rs  fragment.rs  key.rs  level.rs  lib.rs  node.rs  service.rs  source.rs
cli/kernel/src/: lib.rs
cli/launcher/: Cargo.toml  build.rs
cli/launcher/src/: lib.rs  main.rs
cli/launcher/src/command_support/: mod.rs
cli/launcher/src/config_command/: mod.rs
cli/launcher/src/config_command/inbound/: cli.rs  mod.rs
cli/launcher/src/context_command/: mod.rs
cli/launcher/src/context_command/inbound/: cli.rs  mod.rs
cli/launcher/src/instructions_command/: mod.rs
cli/launcher/src/instructions_command/inbound/: cli.rs  mod.rs
cli/launcher/src/launch/: core.rs  help.rs  mod.rs
cli/launcher/src/launch/inbound/: cli.rs  mod.rs
cli/launcher/src/launch/outbound/: exec.rs  mod.rs  resolver.rs  tls.rs
cli/launcher/src/launch/outbound/resolve/: cache.rs  cache_root.rs  fetcher.rs  keys.rs  manifest.rs  mod.rs  verifier.rs
cli/launcher/src/version/: core.rs  mod.rs
cli/launcher/src/version/inbound/: cli.rs
cli/launcher/tests/: config.rs  context.rs  dispatch.rs  help.rs  instructions.rs  resolution.rs
cli/launcher/tests/common/: mod.rs
cli/launcher/tests/fixtures/: luminosity_fixture.rs  manifest.example.json
cli/src/: lib.rs  main.rs
cli/src/version/inbound/: cli.rs  mod.rs
cli/src/version/outbound/: build_metadata.rs  mod.rs
cli/tests/: version.rs
cli/verify/: Cargo.toml
cli/verify/src/: main.rs
cli/verify/tests/: verify.rs
common/: eval.py
kernel/: Cargo.toml
keys/: luminosity-release.pub
meta/decisions/: ADR-0001-skills-vs-cli-division-of-labour.md  ADR-0002-zero-setup-static-binary-distribution.md  ADR-0003-multi-level-userspace-configuration-model.md  ADR-0004-three-toolchain-split.md  ADR-0005-bash-3.2-compatibility-floor.md  ADR-0006-mise-invoke-task-runner.md  ADR-0007-skills-as-the-product.md  ADR-0008-filesystem-as-message-bus-and-knowledge-corpus.md  ADR-0009-thin-cli-over-a-hexagonal-ports-and-adapters-core.md  ADR-0010-git-style-modular-cli-of-on-demand-static-binaries.md  ADR-0011-inspect-as-the-skill-evaluation-harness.md  ADR-0012-two-level-per-skill-context-with-frontmatter-stripped.md
meta/notes/: 2026-07-01-support-cli-switches-alongside-env-toggles.md
meta/plans/: 2026-06-27-0006-establish-rust-toolchain-guard-rails.md  2026-06-29-0007-scaffold-hexagonal-rust-workspace.md  2026-07-02-0014-relocate-workspace-crates-under-cli-and-rename-launcher-crate.md  2026-07-03-0008-static-binary-distribution-and-launcher.md  2026-07-05-0009-multi-level-configuration-system.md  2026-07-07-0010-apply-eval-framework-to-configure-skill.md  2026-07-09-0015-converge-release-and-signing-onto-accelerator.md  2026-07-11-0016-plugin-global-context-injection.md  2026-07-13-0017-per-skill-context-injection.md  2026-07-20-0018-per-skill-instructions-injection.md
meta/prs/: 1-description.md  16-description.md  17-description.md  2-description.md  22-description.md  25-description.md  26-description.md  27-description.md  3-description.md  4-description.md  5-description.md  6-description.md  7-description.md  8-description.md  9-description.md
meta/validations/: 2026-06-27-0006-establish-rust-toolchain-guard-rails-validation.md  2026-07-02-0014-relocate-workspace-crates-under-cli-and-rename-launcher-crate-validation.md  2026-07-03-0008-static-binary-distribution-and-launcher-validation.md  2026-07-07-0010-apply-eval-framework-to-configure-skill-validation.md  2026-07-09-0015-converge-release-and-signing-onto-accelerator-validation.md  2026-07-11-0016-plugin-global-context-injection-validation.md  2026-07-13-0017-per-skill-context-injection-validation.md  2026-07-20-0018-per-skill-instructions-injection-validation.md
meta/work/: 0001-baseline-architecture-and-engineering-guard-rails.md  0002-modular-rust-cli-architecture-and-hexagonal-workspace-layout.md  0003-skill-evaluation-framework-selection.md  0004-record-existing-implicit-architecture-decisions-as-adrs.md  0005-record-spike-dependent-architecture-decisions-as-adrs.md  0006-establish-rust-toolchain-guard-rails-in-mise-and-ci.md  0007-scaffold-hexagonal-rust-workspace-with-version-subcommand.md  0008-on-demand-static-binary-distribution-and-launcher.md  0009-multi-level-configuration-system.md  0010-apply-eval-framework-to-configure-skill.md  0011-configuration-feature-parity-with-accelerator.md  0012-cross-crate-architecture-enforcement-as-the-workspace-grows.md  0013-bump-pinned-rust-stable-toolchain.md  0014-relocate-workspace-crates-under-cli-and-rename-launcher-crate.md  0015-converge-release-and-signing-process-onto-accelerator.md  0016-plugin-global-context-injection.md  0017-per-skill-context-injection.md  0018-per-skill-instructions-injection.md  0019-template-management-subcommands.md  0020-composed-configuration-schema.md  0021-config-file-comment-strategy.md
scripts/: lint-bashisms.sh  test-luminosity-entrypoint.sh
tasks/: README.md  __init__.py  assertions.py  build.py  changelog.py  deny.py  deps.py  git.py  github.py  keys.py  marketplace.py  pup.py  release.py  sign.py  version.py
tasks/eval/: __init__.py  gate.py  readback.py  skills.py  staging.py  view.py
tasks/format/: __init__.py  build_system.py  cli.py  kernel.py  launcher.py  scripts.py
tasks/lint/: __init__.py  build_system.py  cli.py  kernel.py  launcher.py  scripts.py  workflows.py
tasks/shared/: env.py  errors.py  files.py  hashing.py  (+5 more)
tests/: conftest.py
(+169 files in other folders)
