[workspace]
# resolver = "3" so `rust-version` drives MSRV-aware version selection (a
# resolver = "2" workspace ignores rust-version at resolution). Cargo 1.84+.
resolver = "3"
members = ["launcher", "kernel", "verify"]

[workspace.dependencies]
# Versions are MSRV-first (rust-version <= 1.90) and frozen in Cargo.lock.
clap = { version = "4.6", features = ["derive"] }
# vergen pinned EXACTLY: 9.1.0's vergen-lib bump is incompatible with
# vergen-gitcl 1.0.8 (two vergen-lib versions break the Emitter); 10.x needs 1.95.
vergen = { version = "=9.0.6", default-features = false }
vergen-gitcl = { version = "1", features = ["build", "cargo"] }
time = { version = "0.3", features = ["parsing"] }  # dev-only
# The launcher HTTP/verification stack (kernel stays dependency-light).
# THE RUSTLS TRAP: reqwest MUST be default-features = false or its default
# native-tls feature pulls openssl-sys and trips deny.toml. TLS roots are the
# bundled webpki-roots (no host cert store, AC7); the `-no-provider` variant
# plus a direct rustls dep with the `ring` feature keeps the crypto provider off
# aws-lc-rs (C + per-arch asm, hostile to the four-triple cross-build).
# hickory-dns makes name resolution bypass the host getaddrinfo/nsswitch.
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "rustls-tls-webpki-roots-no-provider",
    "hickory-dns",
] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
minisign-verify = "0.2.5"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[workspace.lints.rust]
# In-manifest equivalent of `-D warnings`; CI also passes it explicitly.
warnings = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# restriction is allow-by-default; these are the cherry-picked opt-ins.
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
